--- a/11-equivalence_test.Rmd
+++ b/11-equivalence_test.Rmd
@@ -68,7 +68,7 @@ For now, the most important aspect of conducting an equivalence test is the fact
 
 ## Equivalence - repeated measures
 
-Consider the following scenario where you begin a study with the intent to prove there is no effect. Many years ago the cereal [Shreddies](https://fameable.com/diamond-shreddies-rebranding-case-study/144/) engaged in an interested marketing strategy. They decided to market new Diamond Shreddies as illustrated below. Imagine that you are a researcher tasked to compare the taste of the two types of Shreddies. Participants are given a bowl of the old Shreddies and then asked to rate it on a 1 to 15 point scale where higher ratings indicate a better taste. Following this they are given a bowl of the new Diamond Shreddies and asked rate the taste. How do you go about comparing the taste ratings if your goal is to establish the taste of the old Shreddies is the same as new Diamond Shreddies?
+Consider the following scenario where you begin a study with the intent to prove there is no effect. Many years ago the cereal [Shreddies](https://fameable.com/diamond-shreddies-rebranding-case-study/144/) engaged in an interested marketing strategy. They decided to market new Diamond Shreddies as illustrated below. Imagine that you are a researcher tasked to compare the taste of the two types of Shreddies. Participants are given a bowl of the old Shreddies and then asked to rate it on a 1 to 15 point scale where higher ratings indicate a better taste. Following this they are given a bowl of the new Diamond Shreddies and asked to rate the taste. How do you go about comparing the taste ratings if your goal is to establish the taste of the old Shreddies is the same as new Diamond Shreddies?
 
 ```{r, echo=FALSE, out.width="60%"}
 knitr::include_graphics("ch_equivalence/images/diamond.jpg")
