--- a/12-precision_sample_size.Rmd
+++ b/12-precision_sample_size.Rmd
@@ -21,7 +21,7 @@ Interpretation of confidence intervals can be challenging. **Prior** to collecti
 
 Imagine you are about to conduct a correlation study (*N* = 100) and you plan to construct a confidence interval around that correlation. At this point, prior to data collection, there is a 95% chance that the confidence interval you construct around the sample correlation will overlap with the population correlation (i.e., the population parameter). You collect your data and find $r$ = .35, 95% CI [.16, .51]. Now that you have a specific confidence interval how do you interpret it? You can say the confidence interval is plausible range of the values for the population correlation. You should **not** say there is a 95% chance that population correlation is in the .16 to .51 range. Why not? Once the data is collected and you have a specific interval with end points (e.g., .16 to .51) statisticians think of the interval as overlapping with the population correlation (a probability of 1.00) or not (a probability of 0). Thus, once you have a specific interval, after data collection, the probability that it contains the population parmater is 1.00 or 0 - you just don't know which. So a convienient way to think about the range is by using the word **plausible** which is not associated with a probability. We simply say the confidence interval uses sample data to provide a plausible range of values for the population parameter (e.g., population correlation). 
 
-Using confidence intervals for research can, from one perspective, be a fundamental shift in your thinking about how to interpret results. Null hypothesis significance testing allows for a simplistic conclusion - the population effect size may not be exactly zero. This is a form fo categorical decision making: effect / no effect. In contrast, the using confidence intervals to interpret your data is an **estimation** approach: How large is the effect and how uncertain is my estimate of the effect size? Moreover, using the estimation approach makes it a small jump to drawing scientific conclusions using meta-analysis [see @schmidt2014methods]. You can learn more about confidence interval / estimation approach by checking out this video [workshop](https://www.psychologicalscience.org/members/new-statistics). Alternatively, you can check out these general articles @cumming2009inference, @cumming2014new, @calin2019new.  @calin2019estimation.
+Using confidence intervals for research can, from one perspective, be a fundamental shift in your thinking about how to interpret results. Null hypothesis significance testing allows for a simplistic conclusion - the population effect size may not be exactly zero. This is a form of categorical decision making: effect / no effect. In contrast, the using confidence intervals to interpret your data is an **estimation** approach: How large is the effect and how uncertain is my estimate of the effect size? Moreover, using the estimation approach makes it a small jump to drawing scientific conclusions using meta-analysis [see @schmidt2014methods]. You can learn more about confidence interval / estimation approach by checking out this video [workshop](https://www.psychologicalscience.org/members/new-statistics). Alternatively, you can check out these general articles @cumming2009inference, @cumming2014new, @calin2019new.  @calin2019estimation.
 
 There are two parts to planning using precision:
 
