--- a/13-ppv.Rmd
+++ b/13-ppv.Rmd
@@ -13,7 +13,7 @@ The following CRAN packages must be installed:
 
 ## Overview
 
-Typically when students learn about p-values and Null Hypothesis Significance testing then tend to pair a two ideas. Specifically, they tend to pair a significant $p$-value with the idea there is an effect. The purpose of this section is to unpair those two ideas. Specifically, a significant $p$-value only indicates that there **may** be an effect.
+Typically when students learn about p-values and Null Hypothesis Significance testing they tend to pair  two ideas. Specifically, they tend to pair a significant $p$-value with the idea there is an effect. The purpose of this section is to unpair those two ideas. Specifically, a significant $p$-value only indicates that there **may** be an effect.
 
 At this point you've learned to be cautious when it comes to interpreting $p$-values. But so far, that's been more of a qualitative form of caution. In this section we attempt to make it a more quantitative form of caution. Specifically, we introduce you to the concept of positive predictive values (PPV) in the context of interpreting significant *p*-values. The PPV statistic provides us with an estimate of how likely it is there really is an effect when a *p*-value is significant. The approach for this chapter was inspired by a [blog](https://dirnagl.com/2014/09/22/p-value-vs-positive-predictive-value/) post. I strongly encourage you to watch [this video](https://youtu.be/7daQRvRO-NE) by the Center for Open Science on the consequences of low statistical power.
 
@@ -22,7 +22,7 @@ At this point you've learned to be cautious when it comes to interpreting $p$-va
 
 ### Probability of an effect
 
-When you conduct an experiment to determine if an effect exists you start off fairly confident that the effect is there - otherwise you would not invest the time and money to run the study. But some research hypotheses will be true and others will not be true. One way to think about this is by imagining 1000 hypothesis as per Figure \@ref(fig:ppvfig1). In this figure there are 1000 squares. Each square represents an hypothesis worth testing. Just like the real world some hypotheses are true and some are false. We've shaded the squares to indicate which hypotheses are true or false. More specifically, we shaded 40% of the 1000 hypotheses (i.e., 600) green to indicate they are true (i.e., there is an effect). In contrast, we shaded 60% of the 1000 hypotheses (i.e., 600) yellow to indicate they are false (i.e., there is no effect).
+When you conduct an experiment to determine if an effect exists you start off fairly confident that the effect is there - otherwise you would not invest the time and money to run the study. But some research hypotheses will be true and others will not be true. One way to think about this is by imagining 1000 hypothesis as per Figure \@ref(fig:ppvfig1). In this figure there are 1000 squares. Each square represents an hypothesis worth testing. Just like the real world some hypotheses are true and some are false. We've shaded the squares to indicate which hypotheses are true or false. More specifically, we shaded 40% of the 1000 hypotheses (i.e., 400) green to indicate they are true (i.e., there is an effect). In contrast, we shaded 60% of the 1000 hypotheses (i.e., 600) yellow to indicate they are false (i.e., there is no effect).
 
 Why did we pick the percentage of hypotheses that are true in Figure \@ref(fig:ppvfig1) to be 40%? We did so because 40% could well correspond to the number of hypotheses that are true in psychology research overall. It's difficult to assess the number of hypotheses that are true in psychology given that there is a tendency for only significant effects to be published. However, we can examine pre-registered studies to obtain an estimate of the percentage of hypotheses that are true. With pre-registration scientists register their hypotheses before they collect their data. Consequently looking at the percentage of pre-registered hypotheses that are true may be a reasonable estimate of the percentage of hypotheses that are true in general. Fortunately, a recent study examined a large set of  pre-registered studies and determined that just over 40% of research hypotheses are true [@scheel2020excess]. This finding correspondingly implies that approximately 60% of research hypotheses are false. That is, approximately 60% of studies fail to find the desired effect. We used these percentages to shade Figure \@ref(fig:ppvfig1). More specifically, we used these numbers to indicate P(effect) = .400 and the P(no effect) = .600.
 
@@ -197,7 +197,7 @@ knitr::include_graphics("ch_ppv/images/fig9.png")
 
 ## Calculating power for your study
 
-Although we do a sample size analysis before collecting data - we are often are unable to obtain the desired sample size. We can determine the consequences of failing to obtain the desired sample size by calculating positive predictive value. The first step in doing so is calculating the power for your study based on the number of participants you actually obtained.
+Although we do a sample size analysis before collecting data - we are often unable to obtain the desired sample size. We can determine the consequences of failing to obtain the desired sample size by calculating positive predictive value. The first step in doing so is calculating the power for your study based on the number of participants you actually obtained.
 
 To calculate the power for your study you need to use the same estimate of the population effect size that you used in original sample size analysis. You merely enter that same smallest effect size of interest (i.e., population level effect) and your obtained sample size into the R functions and it will return the power for your study - based on the sample size you actually obtained.
 
