--- a/21-tools.Rmd
+++ b/21-tools.Rmd
@@ -17,7 +17,15 @@ Also don't forget to pre-register any analyses involving control variables. Cont
 * [Spector, P. E., & Brannick, M. T. (2011). Methodological urban legends: The misuse of statistical control variables. Organizational Research Methods, 14(2), 287-305.](https://doi.org/10.1177%2F1094428110369842)
 
 
+## Transparency checklist
 
+Be sure to check out the [Transparency checklist](http://www.shinyapps.org/apps/TransparencyChecklist/). This is a great tool to help you ensure your process is transparent.
+
+## Helpful web apps
+
+Daniel Lakens has a number of very helpful web apps to help you with sample size planning and other issues. I encourage you to check them out [here](https://lakens.github.io/shiny_apps/).
+
+As well, check out [Designing Experiments](https://designingexperiments.com/shiny-r-web-apps/) for some other helpful tools. Sampling size planning, effect size calculations, and more!
 
 
 ## Minimizing mistakes
