--- a/21-tools.Rmd
+++ b/21-tools.Rmd
@@ -82,6 +82,7 @@ Some other great resources:
 
 * [bookdown: Authoring Books and Technical Documents with R Markdow](https://bookdown.org/yihui/bookdown/) by Xie. Free.
 
+* Karl Broman's [website](https://kbroman.org/knitr_knutshell/) has many helpful tips. Especially this [page](https://kbroman.org/knitr_knutshell/pages/Rmarkdown.html).
 
 ### papaja
 
