--- a/packages.bib
+++ b/packages.bib
@@ -26,8 +26,8 @@
 @Manual{R-broom,
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
-  year = {2021},
-  note = {R package version 0.7.10},
+  year = {2022},
+  note = {R package version 0.7.12},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -105,7 +105,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.36},
+  note = {R package version 1.37},
   url = {https://yihui.org/knitr/},
 }
 
@@ -151,8 +151,8 @@
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2021},
-  note = {R package version 2.1.1},
+  year = {2022},
+  note = {R package version 2.1.2},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -190,9 +190,9 @@
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.1.4},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
@@ -206,10 +206,10 @@
 
 @Manual{R-TOSTER,
   title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
-  author = {Daniel Lakens},
-  year = {2018},
-  note = {R package version 0.3.4},
-  url = {https://CRAN.R-project.org/package=TOSTER},
+  author = {Daniel Lakens and Aaron Caldwell},
+  year = {2022},
+  note = {R package version 0.4.0},
+  url = {https://aaroncaldwell.us/TOSTERpkg/},
 }
 
 @Book{bookdown2016,
