--- a/21-tools.Rmd
+++ b/21-tools.Rmd
@@ -250,6 +250,16 @@ Even better, you can use the [retractcheck](https://cran.r-project.org/package=r
 knitr::include_graphics("ch_tools/images/retractcheck_website.png")
 ```
 
+## Big data
+
+Occasionally psychology researchers deal with big data. File sizes can be quite large with big data. Check out the [arrow package](https://cran.r-project.org/web/packages/arrow/index.html), specifically, the write_parquet() command as means of using smaller file sizes. This approach can make sharing a file on GitHub, or emailing it to a colleague, substantially easier.
+
+```{r, echo = FALSE, out.width = "60%", cap = "Arrow package"}
+knitr::include_graphics("ch_tools/images/arrow_package.png")
+```
+
+
+
 
 
 
