--- a/21-tools.Rmd
+++ b/21-tools.Rmd
@@ -76,6 +76,7 @@ You can learn more about rmarkdown in this [video](https://vimeo.com/178485416).
 
 Some other great resources:
 
+
 * [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) by Xie, Allaire, and Grolemund. Free.
 
 * [R Markdown Cookbook](https://bookdown.org/yihui/rmarkdown-cookbook/) by Xie, Dervieux, and Riederer. Free.
@@ -179,6 +180,13 @@ If you want to learn more about statistics I suggest [@maxwell2017designing], [@
 
 There are many R books out there. I believe that you will find these most helpful:
 
+
+* [Data Visualization](https://socviz.co) by Healy. Free.
+
+* [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) by Wilke. Free.
+
+* [ggplot2](https://ggplot2-book.org/index.html) by Wickham. Free.
+
 * [R for Data Science](https://r4ds.had.co.nz) by Wickham and Grolemund. Free.
 
 * [Hands-On Programming with R](https://rstudio-education.github.io/hopr/) by Grolemund. Free.
@@ -187,6 +195,28 @@ There are many R books out there. I believe that you will find these most helpfu
 
 * [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
 
+
+Then some books that are great but less likely to by used by psychology folks:
+
+* [Mastering Shiny](https://mastering-shiny.org) by Wickham. Free.
+
+* [R packages](https://r-pkgs.org) by Wickham Free.
+
+
+* [Efficient R Programming](https://csgillespie.github.io/efficientR/) by Lovelace. Free.
+
+* [Text Mining with R](https://www.tidytextmining.com) by Silge and Robinson. Free.
+
+
+* [Javascript for R](https://book.javascript-for-r.com) by Coene. Free.
+
+* [Practical Data Science with R](https://www.manning.com/books/practical-data-science-with-r-second-edition?query=practical%20datas%20science%20with%20r) by Zumel and Mount.
+
+* [Functional Programming in R](https://www.amazon.ca/Functional-Programming-Advanced-Statistical-Analysis/dp/148422745X/ref=sr_1_2?crid=2PYTJ42R507CT&keywords=functional+programming+in+r&qid=1655326113&s=books&sprefix=functional+programming+in+r%2Cstripbooks%2C98&sr=1-2) by Mailund. 
+
+* [Deep learning with R](https://www.manning.com/books/deep-learning-with-r) Chollet and Allaire.
+
+* [Extending R](https://www.amazon.ca/Extending-R/dp/B07452L4XB) by Chambers.
 
 ## Retracted articles
 
