--- a/21-tools.Rmd
+++ b/21-tools.Rmd
@@ -185,6 +185,8 @@ There are many R books out there. I believe that you will find these most helpfu
 
 * [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) by Wilke. Free.
 
+* [R Graphics Cookbook](https://r-graphics.org/index.html) by Chang. Free.
+
 * [ggplot2](https://ggplot2-book.org/index.html) by Wickham. Free.
 
 * [R for Data Science](https://r4ds.had.co.nz) by Wickham and Grolemund. Free.
