--- a/packages.bib
+++ b/packages.bib
@@ -11,15 +11,15 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2021},
+  year = {2022},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.24},
+  year = {2022},
+  note = {R package version 0.27},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
@@ -27,7 +27,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2022},
-  note = {R package version 0.7.12},
+  note = {R package version 0.8.0},
   url = {https://CRAN.R-project.org/package=broom},
 }
 
@@ -41,9 +41,9 @@
 
 @Manual{R-datasauRus,
   title = {datasauRus: Datasets from the Datasaurus Dozen},
-  author = {Steph Locke and Lucy {D'Agostino McGowan}},
-  year = {2018},
-  note = {R package version 0.1.4},
+  author = {Rhian Davies and Steph Locke and Lucy {D'Agostino McGowan}},
+  year = {2022},
+  note = {R package version 0.1.6},
   url = {https://CRAN.R-project.org/package=datasauRus},
 }
 
@@ -51,14 +51,14 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2022},
-  note = {R package version 1.0.8},
+  note = {R package version 1.0.9},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-emoGG,
   title = {emoGG: Use Emoji in ggplot2},
   author = {David L Miller},
-  year = {2021},
+  year = {2022},
   note = {R package version 0.0.2},
 }
 
@@ -88,8 +88,8 @@
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2021},
-  note = {R package version 3.3.5},
+  year = {2022},
+  note = {R package version 3.3.6},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -104,8 +104,8 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.37},
+  year = {2022},
+  note = {R package version 1.39},
   url = {https://yihui.org/knitr/},
 }
 
@@ -143,8 +143,8 @@
 @Manual{R-RColorBrewer,
   title = {RColorBrewer: ColorBrewer Palettes},
   author = {Erich Neuwirth},
-  year = {2014},
-  note = {R package version 1.1-2},
+  year = {2022},
+  note = {R package version 1.1-3},
   url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
 
@@ -160,15 +160,15 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2022},
-  note = {R package version 2.12},
+  note = {R package version 2.14},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-skimr,
   title = {skimr: Compact and Flexible Summaries of Data},
   author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
-  year = {2021},
-  note = {R package version 2.1.3},
+  year = {2022},
+  note = {R package version 2.1.4},
   url = {https://CRAN.R-project.org/package=skimr},
 }
 
@@ -183,8 +183,8 @@
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2021},
-  note = {R package version 3.1.6},
+  year = {2022},
+  note = {R package version 3.1.7},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
@@ -208,7 +208,7 @@
   title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
   author = {Daniel Lakens and Aaron Caldwell},
   year = {2022},
-  note = {R package version 0.4.0},
+  note = {R package version 0.4.1},
   url = {https://aaroncaldwell.us/TOSTERpkg/},
 }
 
