--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -20,6 +20,7 @@ Recall that when there is a single population we express the variance in sample 
 $$
 \begin{aligned} 
 \sigma_{\bar{x}}^2 &= \text{variance due to sampling error}\\
+&= \frac{\sigma_{people}^2}{\text{sample size}}\\
 &= \frac{\sigma_{people}^2}{n}\\
 \end{aligned}
 $$
@@ -31,7 +32,8 @@ When there are multiple populations with identical variances, but different popu
 
 $$
 \begin{aligned} 
-\text{variance due to sampling error} &= \frac{\sigma_{people}^2}{n}\\
+\text{variance due to sampling error} &= \frac{\sigma_{people}^2}{\text{sample size}}\\
+&= \frac{\sigma_{people}^2}{n}\\
 \end{aligned}
 $$
 
