--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -98,7 +98,7 @@ library(tidyverse)
 library(tidyverse)
 library(learnSampling)
 
-set.seed(1)
+set.seed(1) # set random number seed
 pop1 <- make_population(mean = 172.50, variance = 156.3236)
 
 set.seed(1)
