--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -180,10 +180,16 @@ $$
 
 We use this formula in each of the cells:
 
+```{r, eval = FALSE, echo = FALSE}
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|:---------:|:----------:|:-----:|
 yes_juggle| $\bar{x_{1}}=\frac{\sum x_i}{n}\\=\frac{79+66+70+75+67}{5}\\= `r xbar1`$       | $\bar{x_{2}}=\frac{\sum x_i}{n}\\=\frac{62+84+66+73+78}{5}\\= `r xbar2`$           | $\bar{x_{3}}=\frac{\sum x_i}{n}\\=\frac{76+94+83+94+93}{5}\\= `r xbar3`$      |
 no_juggle |$\bar{x_{4}}=\frac{\sum x_i}{n}\\=\frac{61+58+64+56+58}{5}\\= `r xbar4`$        | $\bar{x_{5}}=\frac{\sum x_i}{n}\\=\frac{61+42+59+51+50}{5}\\= `r xbar5`$           |  $\bar{x_{6}}=\frac{\sum x_i}{n}\\=\frac{66+59+38+61+53}{5}\\= `r xbar6`$     |
+```
+
+```{r, echo = FALSE, out.width="100%"}
+knitr::include_graphics("ch_deeper_nway/images/calc_cell_mean.png")
+```
 
 ### Population variance estimates
 
@@ -196,10 +202,16 @@ $$
 
 We use this formula in each of the cells:
 
+```{r, eval = FALSE, echo = FALSE}
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|:---------:|:----------:|:-----:|
 yes_juggle|$s_1^2=\frac{\sum (x_i - \bar{x_1})^2}{n-1}\\=\frac{(79-`r xbar1`)^2+(66-`r xbar1`)^2+(70-`r xbar1`)^2+(75-`r xbar1`)^2+(67-`r xbar1`)^2}{5 - 1}\\=`r var1`$|$s_2^2=\frac{\sum (x_i - \bar{x_2})^2}{n-1}\\=\frac{(62-`r xbar2`)^2+(84-`r xbar2`)^2+(66-`r xbar2`)^2+(73-`r xbar2`)^2+(78-`r xbar2`)^2}{5 - 1}\\=`r var2`$|$s_3^2=\frac{\sum (x_i - \bar{x_3})^2}{n-1}\\=\frac{(76-`r xbar3`)^2+(94-`r xbar3`)^2+(83-`r xbar3`)^2+(94-`r xbar3`)^2+(93-`r xbar3`)^2}{5 - 1}\\=`r var3`$
 no_juggle |$s_4^2=\frac{\sum (x_i - \bar{x_4})^2}{n-1}\\=\frac{(61-`r xbar4`)^2+(58-`r xbar4`)^2+(64-`r xbar4`)^2+(56-`r xbar4`)^2+(58-`r xbar4`)^2}{5 - 1}\\=`r var4`$|$s_5^2=\frac{\sum (x_i - \bar{x_5})^2}{n-1}\\=\frac{(61-`r xbar5`)^2+(42-`r xbar5`)^2+(59-`r xbar5`)^2+(51-`r xbar5`)^2+(50-`r xbar5`)^2}{5 - 1}\\=`r var5`$|$s_6^2=\frac{\sum (x_i - \bar{x_6})^2}{n-1}\\=\frac{(66-`r xbar6`)^2+(59-`r xbar6`)^2+(38-`r xbar6`)^2+(61-`r xbar6`)^2+(53-`r xbar6`)^2}{5 - 1}\\=`r var6`$
+```
+
+```{r, echo = FALSE, out.width="100%"}
+knitr::include_graphics("ch_deeper_nway/images/calc_cell_var.png")
+```
 
 As noted above, it's important to remember that each sample variances (e.g., $s_1^2$) is an estimate of the corresponding population variance (e.g., $\sigma_1^2$). This is illustrated in the figure below.
 
